--- a/css/main.css
+++ b/css/main.css
@@ -357,6 +357,31 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+.profile:before {
+  content: '';
+  position: absolute;
+  left: -5px;
+  top: 20%;
+  background-image: url("../img/flores.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 150px;
+  width: 220px;
+}
+@media screen and (min-width: 1025px) {
+  .profile:before {
+    width: 0;
+    transform: rotate(60deg) translateX(-50%);
+    transition: all 1.2s ease-out;
+    transform-origin: 0;
+  }
+  .profile.active:before {
+    width: 200px;
+    transform: rotate(0deg) translateX(0);
+  }
 }
 .profile h1 {
   text-align: center;
@@ -374,11 +399,17 @@ button {
   font-size: 14px;
   color: #000;
   font-family: 'Gotham-Light', sans-serif;
-  line-height: 1.5;
+  line-height: 1.8;
 }
 @media screen and (min-width: 767px) {
   .profile {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
     height: calc(100vh - 70px);
+    text-align: center;
+    width: 100%;
+    padding: 0;
   }
   .profile h1 {
     font-size: 24px;
@@ -398,11 +429,11 @@ button {
     font-size: 30px;
   }
   .profile p {
-    font-size: 18px;
+    font-size: 16px;
   }
 }
 .profile__container {
-  max-width: 800px;
+  max-width: 760px;
   margin: auto;
 }
 .profile__button {
@@ -473,9 +504,6 @@ button {
   order: 1;
 }
 @media screen and (min-width: 1025px) {
-  .personal__item {
-    border: 1px solid #800080;
-  }
   .personal__item:first-child {
     order: 0;
   }
